# r-type

./: Makefile  README.md  conanfile.txt
SFML/: CMakeLists.txt  Makefile  conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt
SFML/Include/: Animation.hpp  Background.hpp  Client.hpp  Component.hpp  Controls.hpp  Graphics.hpp  MenuHandle.hpp  Sound.hpp  SpriteCreator.hpp  SpriteType.hpp
SFML/Src/: Animation.cpp  Background.cpp  Client.cpp  Component.cpp  Controls.cpp  Graphics.cpp  MenuHandle.cpp  Sound.cpp  SpriteCreator.cpp  main.cpp
doc/: ProtocolDocs.txt  RFC_Rtype.txt
server/: CMakeLists.txt  Makefile  conan.cmake  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt
server/include/: CombatComponent.hpp  Component.hpp  Entity.hpp  FightSystem.hpp  GameEngine.hpp  GraphicalComponent.hpp  Mediator.hpp  MoveSystem.hpp  PositionComponent.hpp  ScoreComponent.hpp  Server.hpp  System.hpp  Utils.hpp
server/src/: CombatComponent.cpp  Component.cpp  Entity.cpp  FightSystem.cpp  GameEngine.cpp  GraphicalComponent.cpp  ImplementEngineUpdate.cpp  Main.cpp  Mediator.cpp  MoveSystem.cpp  PositionComponent.cpp  ScoreComponent.cpp  Server.cpp  ServerUtils.cpp  System.cpp  Utils.cpp
server/stages/: readfile.cpp  stage1.txt
